# FallGuysPing

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  qml.qrc
assets/: fallguysping.rc  version.rc
qml/: AboutPage.qml  AppPage.qml  ColorPicker.qml  CornerSelect.qml  CusSwitch.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomText.qml  FusionSpinBox.qml  LabelSeparator.qml  MainPage.qml  MainWindow.qml  OverlayPage.qml  OverviewPage.qml  PingBox.qml  PingDashboard.qml  PingTextWindow.qml  ServerInfoProps.qml  ServerInfoRow.qml  ServerInfoTable.qml  Sidebar.qml  SquareRadioButton.qml  Tab.qml
src/: DashedRectangle.cpp  DashedRectangle.h  FileChangeWorker.cpp  FileChangeWorker.h  FileWatcher.cpp  FileWatcher.h  GeoData.cpp  GeoData.h  IPGeoLocator.cpp  IPGeoLocator.h  Manager.cpp  Manager.h  PingWorker.cpp  PingWorker.h  Pinger.cpp  Pinger.h  Registry.cpp  Settings.cpp  Settings.h  Stopwatch.cpp  Stopwatch.h  TextCorner.h  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  main.cpp
